Menu overflow fix and 'buy me a coffee' added

--- a/src/components/header/Menu.css
+++ b/src/components/header/Menu.css
@@ -1,15 +1,18 @@
 .hamburgerMenu {
   position: fixed;
-  z-index: 10001230;
+  overflow: hidden;
+  z-index: 1000;
 }
 
 .menu-items {
   position: relative;
   padding: 15px;
+  overflow: hidden;
 }
 
 .menu-item {
   margin: 1rem 0;
+  overflow: hidden;
 }
 
 .menu-item a span {
@@ -50,6 +53,7 @@
 }
 
 .bm-item-list a {
+  overflow: hidden;
   padding: 0.5rem;
   color: white;
   text-decoration: none;
@@ -66,7 +70,6 @@
   color: white;
   position: relative;
 }
-
 
 .Overlay {
   background-color: rgba(0, 0, 0, 0.75);
@@ -148,4 +151,23 @@
   text-align: center;
   margin-bottom: 20px;
   font-size: 1.5rem;
+}
+
+.menu-item.coffee-button {
+  margin-top: 2rem;
+}
+
+.menu-item.coffee-button a {
+  display: inline-block;
+  background-color: #3b210a;
+  color: #333;
+  font-weight: bold;
+  padding: 12px 24px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+}
+
+.menu-item.coffee-button a:hover {
+  background-color: #2e1905;
 }
